# 42sh

./: Makefile.am  README  README.md  autogen.sh  configure.ac
doc/: 42sh.1  Doxyfile  mainpage.md
src/: main.c
src/ast/: and_or_ast.c  ast.h  case_command_ast.c  command_ast.c  compound_list_ast.c  for_command_ast.c  if_command_ast.c  item_case.c  list_ast.c  pipeline_ast.c  shell_command_ast.c  simple_command_ast.c  until_command_ast.c  while_command_ast.c
src/builtins/: alias.c  break.c  builtins.h  cd.c  continue.c  echo.c  exit.c  export.c  global.c  pwd.c  source.c  unalias.c
src/debug/: and_or_ast_to_dot.c  ast_to_dot.c  ast_to_dot.h  case_command_ast_to_dot.c  command_ast_to_dot.c  compound_list_to_dot.c  for_command_ast_to_dot.c  if_command_ast_to_dot.c  list_ast_to_dot.c  pipeline_ast_to_dot.c  shell_command_ast_to_dot.c  simple_command_ast_to_dot.c  until_command_ast_to_dot.c  while_command_ast_to_dot.c
src/exec/: and_or_exec.c  case_command_exec.c  command_exec.c  compound_list_exec.c  exec.c  exec.h  for_command_exec.c  if_command_exec.c  list_exec.c  loop.c  loop.h  pipeline_exec.c  redir_exec.c  shell_command_exec.c  simple_command_exec.c  until_command_exec.c  while_command_exec.c
src/expansion/: command_substitution.c  expand_special.c  expansion.h  tilde_expansion.c  variable_expansion.c
src/lexer/: lexer.c  lexer.h  token.c  token.h
src/option/: option.c  option.h  option_struct.c
src/parser/: and_or_parser.c  case_command_parser.c  command_parser.c  compound_list_parser.c  destroy_and_nullify.c  destroy_and_nullify.h  for_command_parser.c  if_command_parser.c  item_case_parser.c  list_parser.c  next_is_keyword.c  next_is_keyword.h  parser.c  parser.h  pipeline_parser.c  redir.c  redir.h  shell_command_parser.c  simple_command_parser.c  skip_newlines.c  skip_newlines.h  until_command_parser.c  while_command_parser.c
src/utils/: dstring.c  dstring.h  file_handler.c  file_handler.h  hash.c  hash_map.c  hash_map.h  hash_map2.c  is_number.c  is_number.h  name.c  name.h  queue.c  queue.h  run_command.c  run_command.h  string_vector.c  string_vector.h  strstrip.c  strstrip.h  vector.c  vector.h  xfcntl.c  xfcntl.h  xfnmatch.c  xfnmatch.h  xio.c  xio.h  xio2.c  xmalloc.c  xmalloc.h  xstring.c  xstring.h  xunistd.c  xunistd.h  xunistd2.c
tests/: check_assignment.c  check_lexer.c  check_option.c  check_parser.c  check_quoting.c  check_tests.h  functional_test_alias.yaml  functional_test_basic.yaml  functional_test_bool.yaml  functional_test_break.yaml  functional_test_case.yaml  functional_test_cmd_sub.yaml  functional_test_compound.yaml  functional_test_continue.yaml  functional_test_exit.yaml  functional_test_export.yaml  functional_test_for.yaml  functional_test_if.yaml  functional_test_multiple.yaml  functional_test_operators.yaml  functional_test_pipeline.yaml  functional_test_redir.yaml  functional_test_source.yaml  functional_test_var_expansion.yaml  functional_test_while.yaml  functional_tests.sh  redir_test.sh  unit_tests.c
tests/script/: 002.sh  003.sh  004.sh  005.sh  alias.sh  basic_break.sh  basic_continue.sh  case_basic.sh  cmd_sub.sh  for.sh  for_error.sh  if_hard.sh  if_nested.sh  if_no_else.sh  if_then_echo.sh  if_then_elif.sh  if_then_else.sh  multiline_compound.sh  source.sh  two_loop_break.sh  two_loop_break_zero.sh  two_loop_continue.sh  two_loop_continue_zero.sh  unalias.sh  until.sh  until_error.sh  while.sh  while_error.sh
